Add something to make review possible

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="desc">
         <h2>Exciting Interest rates</h2>
-        <p>We are happy to announce you our saving interests are very Attractive</p>
+        <p>We are happy to announce you our saving interests are very Attractive.</p>
       </div>
     </div>
     
