--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       <div class="level">Loan</div>
       <h2>Loan Services</h2>
       <ol>
-        <li>Agricultural Loan</li>
-        <li>Construction Loan</li>
+        <li>Agricultural Loan.</li>
+        <li>Construction Loan.</li>
         <li>General Loan</li>
-        <li>Micro Business Loan</li>
+        <li>Micro Business Loan.</li>
         <li>Small Business Loan</li>
       </ol>
       <button class="btn">Select</button>
